--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,21 +1,36 @@
 header {
-    height: 100vh;
     padding-top: 7rem;
     overflow: hidden;
+    padding-bottom: 50vh;
 }
 
 .header_container {
-    text-align: center;
     height: 100%;
     position: relative;
 }
 
-/* CTA */
-.cta {
-    margin-top: 2.5rem;
+.introduction {
+    margin-left: 10rem;
+    font-size: 2rem;
+}
+
+/* Languages */
+.languages_container {
+    justify-content: center;
+}
+
+.languages {
+    position: absolute;
+    top: 10%;
+    right: 10%;
+    margin-top: 4rem;
     display: flex;
     gap: 1.2rem;
     justify-content: center;
+}
+
+.languages h5 {
+    margin-top: 0.5rem;
 }
 
 /* HeaderSocials */
@@ -26,7 +41,7 @@ header {
     gap: 0.8rem;
     position: absolute;
     left: 0;
-    bottom: 3rem;
+    top: 0.5rem;
 }
 
 .header_socials::after {
@@ -48,16 +63,6 @@ header {
     border-radius: 12rem 12rem 0 0;
     overflow: hidden;
     padding: 5rem 1.5rem 1.5rem 1.5rem;
-}
-
-/* ScrollDown*/
-.scroll_down {
-    position: absolute;
-    right: -2.3rem;
-    bottom: 5rem;
-    transform: rotate(90deg);
-    font-weight: 300;
-    font-size: 0.9rem;
 }
 
 /* Media Queries (medium devices) */
