--- a/src/index.css
+++ b/src/index.css
@@ -51,11 +51,11 @@ h2,
 h3,
 h4,
 h5 {
-    font-weight: 500;
+    font-weight: 5000;
 }
 
 h1 {
-    font-size: 2.5rem
+    font-size: 4rem
 }
 
 section {
@@ -79,6 +79,7 @@ section > h2 {
 a {
     color: var(--color-primary);
     transition: var(--transition);
+    font-size: 2rem;
 }
 
 a:hover {
@@ -89,10 +90,12 @@ a:hover {
     width: max-content;
     display: inline-block;
     color: var(--color-primary);
-    padding: 0.75rem 1.2rem;
+    padding: 0.5rem 0.8rem;
     border-radius: 0.4rem;
     cursor: pointer;
     border: 1px solid var(--color-primary);
+    font-weight: 700;
+    font-size: 1rem;
     transition: var(--transition);
 }
 
