--- a/src/components/CTA/cta.css
+++ b/src/components/CTA/cta.css
@@ -3,7 +3,7 @@
     top: 20%;
     right: 25%;
     z-index: 2;
-    transition: top 1s, right 0.4s;
+    transition: top 0.4s, right 1s ease;
     display: grid;
     grid-template-rows: 0.5fr;
 }
@@ -13,10 +13,11 @@
     top: 90%;
     right: 1%;
     z-index: 2;
-    transition: top 1s, right 0.4s;
+    transition: top 1s, right 0.3s ease;
     display: grid;
     grid-template-rows: 0.5fr ;
     align-content: center;
+    transform: scale(0.7);
 }
 
 
