--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,6 +1,5 @@
 header {
     padding-top: 7rem;
-    overflow: hidden;
     padding-bottom: 50vh;
 }
 
@@ -15,10 +14,6 @@ header {
 }
 
 /* Languages */
-.languages_container {
-    justify-content: center;
-}
-
 .languages {
     position: absolute;
     top: 10%;
@@ -33,6 +28,26 @@ header {
     margin-top: 0.5rem;
 }
 
+.btn.btn-primary-2 {
+    background: transparent;
+    color: var(--white);
+    border-color: transparent;
+}
+
+.btn.btn-primary-2:hover {
+    border-color: var(--color-primary);
+}
+
+.btn.btn-primary-2.active {
+    background: var(--color-bg-variant);
+    color: var(--white);
+    border-color: transparent;
+}
+
+.btn.btn-primary-2.active:hover {
+    border-color: var(--color-primary);
+}
+
 /* HeaderSocials */
 .header_socials {
     display: flex;
@@ -42,27 +57,6 @@ header {
     position: absolute;
     left: 0;
     top: 0.5rem;
-}
-
-.header_socials::after {
-    content: "";
-    width: 1px;
-    height: 2rem;
-    background: var(--color-primary);
-}
-
-/* Portrait */
-.portrait {
-    background: linear-gradient(var(--color-primary), transparent) ;
-    width: 22rem;
-    height: 30rem;
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%);
-    margin-top: 4rem;
-    border-radius: 12rem 12rem 0 0;
-    overflow: hidden;
-    padding: 5rem 1.5rem 1.5rem 1.5rem;
 }
 
 /* Media Queries (medium devices) */
