--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,21 +2,21 @@ nav {
     background: rgba(0,0,0,0.3);
     width: max-content;
     display: block;
-    padding: 0.7rem 1.7rem;
+    padding: 0.5rem 0.9rem;
     z-index: 2;
     position: fixed;
     left: 50%;
     transform: translateX(-50%);
     bottom: 2rem;
     display: flex;
-    gap: 0.8rem;
+    gap: 2rem;
     border-radius: 3rem;
     backdrop-filter: blur(15px);
 }
 
 nav a {
     background: transparent;
-    padding: 0.5rem;
+    padding-top: 0.1rem;
     border-radius: 30%;
     color: var(--color-light);
     font-size: 1rem;
