--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@
     --color-white: #fff;
     --color-light: rgba(255, 255, 255, 0.6);
 
+
     --transition: all 400ms ease;
 
     --container-width-lg: 75%;
@@ -54,22 +55,15 @@ h5 {
     font-weight: 5000;
 }
 
-h1 {
-    font-size: 4rem
-}
-
 section {
     margin-top: 8rem;
 }
 
-section > h2, section > h5 {
-    text-align: center;
-    color: var(--color-light);
-}
-
 section > h2 {
+    text-align: center;
     color: var(--color-primary);
     margin-bottom: 3rem;
+    font-size: 3rem;
 }
 
 .text-light {
