--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -15,9 +15,9 @@ header {
 
 /* Languages */
 .languages {
-    position: absolute;
+    position: relative;
+    align-items: center;
     top: 10%;
-    right: 10%;
     margin-top: 4rem;
     display: flex;
     gap: 1.2rem;
@@ -63,6 +63,7 @@ header {
 @media screen  and (max-width: 1024px) {
     .header {
         height: 68vh;
+        align-self: center;
     }
 }
 
@@ -70,6 +71,10 @@ header {
 @media screen  and (max-width: 600px) {
     .header {
         height: 100vh;
+
+    }
+    .introduction {
+        margin-left: 0.9rem;
     }
     .header_socials,
     .scroll_down {
