--- a/src/index.css
+++ b/src/index.css
@@ -11,12 +11,12 @@
 }
 
 :root {
-    --color-bg: #1f1f38;
-    --color-bg-variant: #2c2c6c;
-    --color-primary: #4db5ff;
-    --color-primary-variant: rgba(77, 181, 255, 0.4);
+    --color-bg: #391E46;
+    --color-bg-variant: #5C3070;
+    --color-primary: #C367F0;
+    --color-primary-variant: #A155C5;
     --color-white: #fff;
-    --color-light: rgba(255, 255, 255, 0.6);
+    --color-light: #C367F0;
 
 
     --transition: all 400ms ease;
