--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -4,21 +4,21 @@
     gap: 8rem;
 }
 
-.experience_container > div {
+.experience_container>div {
     background: linear-gradient(var(--color-bg-variant), var(--color-bg));
     padding: 2rem 4rem;
     border-radius: 4rem;
     border: 2 px solid transparent;
     transition: transform .2s;
-
 }
 
-.experience_container > div:hover {
+
+.experience_container>div:hover {
     transform: scale(1.1);
     cursor: default;
 }
 
-.experience_container > div h3 {
+.experience_container>div h3 {
     text-align: center;
     margin-bottom: 2rem;
     color: var(--color--primary);
@@ -31,6 +31,14 @@
     grid-template-columns: 1 fr 1 fr;
 }
 
+.subtitle {
+    border-color: var(--color-primary-variant);
+    text-align: center;
+    padding-top: 4rem;
+    border-radius: 4rem;
+    border: 2 px solid;
+}
+
 .experience_details {
     display: flex;
     gap: 1rem;
@@ -41,27 +49,30 @@
 }
 
 /* Media Queries (medium devices) */
-@media screen  and (max-width: 1024px) {
+@media screen and (max-width: 1024px) {
     .experience_container {
         grid-template-columns: 1fr;
     }
-    .experience_container > div {
+
+    .experience_container>div {
         width: 80%;
         padding: 2rem;
         margin: 0 auto;
     }
+
     .experience_content {
         padding: 1rem;
     }
 }
 
 /* Media Queries (small devices) */
-@media screen  and (max-width: 600px) {
+@media screen and (max-width: 600px) {
     .experience_container {
         gap: 1rem;
     }
-    .experience_container > div {
-        width: 100%;
+
+    .experience_container>div {
+        width: 80%;
         padding: 2rem 1rem;
         margin: 0 auto;
     }
